Single point NURBS crash in resample node #93521
Labels
No Label
Interest
Alembic
Interest
Animation & Rigging
Interest
Asset System
Interest
Audio
Interest
Automated Testing
Interest
Blender Asset Bundle
Interest
BlendFile
Interest
Code Documentation
Interest
Collada
Interest
Compatibility
Interest
Compositing
Interest
Core
Interest
Cycles
Interest
Dependency Graph
Interest
Development Management
Interest
EEVEE
Interest
FBX
Interest
Freestyle
Interest
Geometry Nodes
Interest
glTF
Interest
Grease Pencil
Interest
ID Management
Interest
Images & Movies
Interest
Import Export
Interest
Line Art
Interest
Masking
Interest
Metal
Interest
Modeling
Interest
Modifiers
Interest
Motion Tracking
Interest
Nodes & Physics
Interest
OpenGL
Interest
Overlay
Interest
Overrides
Interest
Performance
Interest
Physics
Interest
Pipeline & IO
Interest
Platforms, Builds & Tests
Interest
Python API
Interest
Render & Cycles
Interest
Render Pipeline
Interest
Sculpt, Paint & Texture
Interest
Text Editor
Interest
Translations
Interest
Triaging
Interest
Undo
Interest
USD
Interest
User Interface
Interest
UV Editing
Interest
VFX & Video
Interest
Video Sequencer
Interest
Viewport & EEVEE
Interest
Virtual Reality
Interest
Vulkan
Interest
Wayland
Interest
Workbench
Interest: X11
Legacy
Asset Browser Project
Legacy
Blender 2.8 Project
Legacy
Milestone 1: Basic, Local Asset Browser
Legacy
OpenGL Error
Meta
Good First Issue
Meta
Papercut
Meta
Retrospective
Meta
Security
Module
Animation & Rigging
Module
Asset System
Module
Core
Module
Development Management
Module
Grease Pencil
Module
Modeling
Module
Nodes & Physics
Module
Pipeline & IO
Module
Platforms, Builds & Tests
Module
Python API
Module
Render & Cycles
Module
Sculpt, Paint & Texture
Module
Triaging
Module
User Interface
Module
VFX & Video
Module
Viewport & EEVEE
Platform
FreeBSD
Platform
Linux
Platform
macOS
Platform
Windows
Severity
High
Severity
Low
Severity
Normal
Severity
Unbreak Now!
Status
Archived
Status
Confirmed
Status
Duplicate
Status
Needs Info from Developers
Status
Needs Information from User
Status
Needs Triage
Status
Resolved
Type
Bug
Type
Design
Type
Known Issue
Type
Patch
Type
Report
Type
To Do
No Milestone
No project
No Assignees
5 Participants
Notifications
Due Date
No due date set.
Dependencies
No dependencies set.
Reference: blender/blender#93521
Loading…
Reference in New Issue
Block a user
No description provided.
Delete Branch "%!s()"
Deleting a branch is permanent. Although the deleted branch may continue to exist for a short time before it actually gets removed, it CANNOT be undone in most cases. Continue?
System Information
Operating system: Windows-10-10.0.19041-SP0 64 Bits
Graphics card: AMD Radeon RX 5700 XT ATI Technologies Inc. 4.5.14802 Core Profile Context 21.11.2 30.0.14005.1000
Blender Version
Broken: version: 3.0.0 Release Candidate, branch: master, commit date: 2021-11-27 18:08, hash:
d2e6087335
Short description of error
if you resample a curve that only has one point twice, and then try to capture an atribute between those resamples, blender will crash
Exact steps for others to reproduce the error
2021-11-30 16-03-16.mp4
crash.blend
Added subscriber: @Diogo_Valadares
Added subscribers: @HooglyBoogly, @JacquesLucke
Changed status from 'Needs Triage' to: 'Needs User Info'
I can't reproduce the issue. Please try again with the newest 3.0 build.
Changed status from 'Needs User Info' to: 'Needs Triage'
yes, it still crashes in the last build (not sure why steam build wasn't updated yet). I tried default settings and it also crashes. I'll update the description with a better description and a video
Added subscriber: @PratikPB2123
Changed status from 'Needs Triage' to: 'Confirmed'
Hi, thanks for the report. Can reproduce crash on master(
2f7bec04e8e7e423f11767535b469cdeb5062b14
) and 3.0.0 (2fb8c6805a98
)I can reproduce the issue in 3.0 just by duplicating the selected vertex, no need to change the node tree.
Capturing an atribute of a resampled curve point crashes blenderto Single point NURBS crash in resample nodeThis issue was referenced by
ee4ed99866
Changed status from 'Confirmed' to: 'Resolved'
This issue was referenced by
669577a973
Hello, this problem or at least really similar one seems to happen again in 3.2 , could this thread be reopened?